--- a/111.md
+++ b/111.md
@@ -1426,10 +1426,10 @@ Merit.利点。長所。
 4.めそめそ
 正解：(2)
 　解析：妹妹今天好像是第一次约会，从早上开始就心神不宁，坐立不安的样子。
-　(1)ぐらぐら：摇摇晃晃；水等烧得滚开的样子
-　(2)そわそわ：慌慌张张，心神不宁的样子
-　(3)ぶらぶら：摇晃，摇动；闲逛，溜达；无所事事
-　(4)めそめそ：低头抽泣状；动不动就哭
+　(1)ぐらぐら：摇摇晃晃；水等烧得滚开的样子 古拉古拉 
+　(2)そわそわ：慌慌张张，心神不宁的样子 嗦瓦嗦瓦 
+　(3)ぶらぶら：摇晃，摇动；闲逛，溜达；无所事事 不垃不垃
+ 　(4)めそめそ：低头抽泣状；动不动就哭 
 
 
 11. 社長は、会社の将来を                人材の育成いくせいに力を入れている。
@@ -1439,7 +1439,7 @@ Merit.利点。長所。
 4.かかげる
 正解：(1)
 　解析：社长在培养担负公司未来的人才上下了功夫
-　(1)になう(担う)：承担
+　(1)になう(担う)：承担 
 　(2)いたわる(労る)：体贴，安慰；怜悯，同情　一他挖路
 　(3)やしなう(養う)：养育，培养 压西那屋
 　(4)かかげる(掲げる)：悬挂；刊登；张贴；提
@@ -1459,14 +1459,13 @@ Merit.利点。長所。
 　(1)遠ざける(とおざける)：使之远离，疏远，不让近其身
 　(2)ためらう(躊躇う)：踌躇，犹豫
 　(3)案じる(あんじる)：思考，担心
-　(4)よける(避ける)：躲开，避开
-
-14. 彼の予測はことごとく外れた。
+　(4)よける(避ける)：躲开，避开　　避ける　雨を避ける 
+14. 彼の予測はことごとく外れた。 予測　よそく　　悉く　　尽く　
 1.すべて
 
-16. 台風発生のメカニズムについて説明した。
+16. 台風発生のメカニズムについて説明した。　メカニズム　
 1.可能性
-2.きっかけ
+2.きっかけ　
 3.危険性
 4.しくみ
 　正解：(4)
@@ -1478,13 +1477,13 @@ Merit.利点。長所。
 　(4)しくみ　仕組み：构成，原理
 
 
-18. もう彼に本当のことを伝えるすべがない.
+18. もう彼に本当のことを伝えるすべがない.　　
 1.必要
 2.時間
 3.方法
 4.理由
 正解：(3)
-　解析：现在已经，没有办法告诉他真相了。
+　解析：现在已经，没有办法告诉他真相了。　
 　すべ(術)：方法，手段
 　(1)必要：必要
 　(2)時間：时间
@@ -1510,8 +1509,8 @@ Merit.利点。長所。
 21. 拍子
 1.重いものを入れすぎて、持ち上げた拍子ひょうしに紙袋が破れてしまった。
 2.昨日はとても疲れていたので、布団に入った途端に眠ってしまった。
-3.晩ご飯を作ったつぃでに、あしたのお弁当も作った。
-4.雨がやんだうちにに出かけたので、濡れずに済んだ。
+3.晩ご飯を作ったついでに、あしたのお弁当も作った。
+4.雨がやんだうちに出かけたので、濡れずに済んだ。
 正解：(1)
 　解析：拍子(ひょうし)：刚一…时候；正当做某事的时候；音乐拍子
 　(1)因为重的东西放得太多了，刚要拿起纸袋子来的时候，它就破了
@@ -1520,9 +1519,9 @@ Merit.利点。長所。
 　(4)应该用：「うちに」：在……之内，趁着……时
 
 22. 口出し
-1.今の意見に反論のある人は遠慮せず自由に口出ししてください。
-2.店長は客に上手に口出しして、客の好みをうまく聞き出した。　持ち掛ける　
-3.この会社に就職できたのは、山田さんが口出ししてくれたからだ。
+1.今の意見に反論のある人は遠慮せず自由に口出してください。
+2.店長は客に上手にもちかけして、客の好みをうまく聞き出した。　持ち掛ける　
+3.この会社に就職できたのは、山田さんが推薦してくれたからだ。
 4.上司だからといって　部下の私生活にまで　口出しするのはよくない。
 正解：(4)
 　解析：口出し(くちだし)：插嘴，插话，干预
@@ -1624,7 +1623,7 @@ Merit.利点。長所。
 　平行線をたどる：两件事物始終处于对立状态。
 　(1)あゆみ：前进，进展，经历过
 　(2)たどり：追寻，追溯，探索。
-　(3)なぞり ：描，描摹。
+　(3)なぞり ：描，描摹。　なぞる　临摹；照搬，抄袭。
 　(4)つたい：顺，沿。攀。
 
 弊社の採用試験では、筆記試験よりも面接に         1.ウェイト      を置いています。
@@ -1634,7 +1633,7 @@ Merit.利点。長所。
 4.メイン
 正解：(1)
 　解析：我们公司的录取考试，比起笔试，重点更偏重于面试。
-　ウェイトを置く：更重视，重点。
+　ウェイトを置く：更重视，重点。　　注意して重んずるべき点。
 　(1)ウェイト：重量。体重。；重点。重要性。
 　(2)トップ：最高层，最高级；最前头，首位。
 　(3)パワー：力量，权力，势力。
@@ -1644,7 +1643,7 @@ Merit.利点。長所。
 1.予期
 2.見通し
 3.見込み
-4.予断
+4.予断　　予断を許さない
 正解：(4)
 　解析：当选的林先生在采访时说，这次的选举是不到最后都无法判断的激烈的战斗。
 　(1)予期：预期，预料，预想。
@@ -1653,7 +1652,7 @@ Merit.利点。長所。
 　(4)予断：预先判断，预测　予断を許さない　不可预测的
 
 13. 田中さんはいつも手際よく    3.てきぱきと        仕事を進めている。
-1.めきめきと
+1.めきめきと　　
 2.さらさらと
 3.てきぱきと
 4.すくすくと
@@ -1670,14 +1669,14 @@ Merit.利点。長所。
 
 15. 最近、山本さんは新しい仕事に**打ち込ん**でいるらしい。
 1.興味を持っている
-2.しつこく誘われている
+2.しつこく誘われている　
 3.時間をとられている
 4.熱心に取り組んでいる
 　正解：(4)
 　解析：最近，山本似乎热衷于新工作。
 　打ち込む：热衷，专心致志
 　(1)興味を持っている：有兴趣
-　(2)しつこく誘われている：执着地被邀请着
+　(2)しつこく誘われている：执着地被邀请着　执拗，纠缠不休的
 　(3)時間をとられている：被占用了时间
 　(4)熱心に取り込んでいる：热衷于做某事
 
@@ -1690,9 +1689,9 @@ Merit.利点。長所。
 4.驚きだ
 　正解：(2)
 　解析：如果车站前建了一个大型的超市就毫无办法了。
-　お手上げ：束手无策，毫无办法
-　(1)大歓迎：特別欢迎
-　(2)どうしようもない：没有办法
+　お手上げ：束手无策，毫无办法　摊手向上  ┑(￣Д ￣)┍ 
+　(1)大歓迎：特別欢迎 だいかんげい　带康kei
+　(2)どうしようもない：没有办法 
 　(3)ぜひ働きたい：一定想工作
 　(4)驚(おどろ)き：惊讶，吃惊
 あれとは格段 の相違がある。 格段　かくだん　
@@ -1713,7 +1712,7 @@ Merit.利点。長所。
 
 
 20. 一律
-1.山下さんは、会うと一律に赤い帽子をかぶっている。
+1.山下さんは、会うといつも赤い帽子をかぶっている。
 2.休みの日に出かけようとすると、きまってに雨が降る。
 3.うちの会社の社員は、経歴はさまざまだが、全部に留学経験者だ。
 4.すべての経費を一律に削減するのではなく、無駄なものから減らせばよい。
@@ -1727,10 +1726,10 @@ Merit.利点。長所。
 　(4)不要一律削减经费，只要减少不必要的浪费即可。
 
 21. はがす
-1.木村さんはノートに地図を書くと、そのページをはがして私にくれた。
-2.ジャムを作るとき、りんごは皮をはがして、小さく切ってください。
+1.木村さんはノートに地図を書くと、そのページを千切て私にくれた。
+2.ジャムを作るとき、りんごは皮を剝いて、小さく切ってください。
 3.友人へのプレゼントにするので、値段のシールをはがしておいた。
-4.目が疲れるので、家に帰るとすぐコンタクトレンズをはがす。
+4.目が疲れるので、家に帰るとすぐコンタクト　レンズを外す。contact lens 隐形眼镜　
 正解：(3)
 　解析：剥がす(はがす)：剥下，揭下。
 　(1)应该用：千切る(ちぎる)：切碎，捏碎
@@ -1753,10 +1752,10 @@ Merit.利点。長所。
 
 
 23. 損なう
-1.増税によって景気が損なわれることを心配する人が多い。
-2.度重なる発送ミスなどがもとで、顧客との信頼関係を損なってしまった。
-3.仕事に失敗して自信を損なっていたとき、この本を読んだら元気が出ました。
-4.天気予報によると、今週末は天候が損なわれるそうだ。
+1.増税によって**景気が下向く**ことを心配する人が多い。
+2.度重なる発送ミスなどがもとで、顧客との**信頼関係を損なってしまった**。
+3.仕事に失敗して自信を失くしていたとき、この本を読んだら元気が出ました。
+4.天気予報によると、今週末は天候が崩れるそうだ。
 　正解：(2)
 　解析：損なう(そこなう)：损坏，伤害。
 　(1)应该用：下向く(したむく)•朝下，向下
@@ -1769,8 +1768,8 @@ Merit.利点。長所。
 
 
 25. 工面
-1.制度の改正を求めて、街頭で署名を工面する活動を続けた。
-2.サービス向上のために、利用者からアイディアを工面した。
+1.制度の改正を求めて、街頭で署名を収集する活動を続けた。
+2.サービス向上のために、利用者からアイディアを収集した。
 3.選挙が近くなり、各政党は候補者を工面するのに必死だ。
 4.なんとか資金を工面して、ついに自分の店を持つことができた。
 正解：(4)
@@ -1906,10 +1905,10 @@ Merit.利点。長所。
 
 
 20. 規制
-1.光熱費を最小限に規制して、家計の負担を減らしている。
-2.今年は就職活動で忙しくなるので、アルバイトは規制するつもりだ。
-3.マラソン大会当日は交通が規制され、一部の道路が通行止めになる。
-4.この授業は少人数で行われるため、受講できる学生数が規制されている。
+1.光熱費を最小限に縮めして、家計の負担を減らしている。
+2.今年は就職活動で忙しくなるので、アルバイトはとどめるつもりだ。
+3.マラソン大会当日は**交通が規制**され、一部の道路が通行止めになる。
+4.この授業は少人数で行われるため、受講できる学生数が**制限**されている。
 正解：(3)
 　解析：規制(きせい)：限制，限定，规定(用规章加以限制)
 　(1)应该用:縮(ちぢ)める：缩短，縮小。
@@ -1933,10 +1932,10 @@ Merit.利点。長所。
 　(4)应该用：すぐ/たちまち：转眼间，立刻，突然
 
 4. 退く
-1.不規則な生活を退いてから、体調がよくなってきたと感じている。
+1.不規則な生活を止めてから、体調がよくなってきたと感じている。
 2.佐藤氏は社長の地位を退いた後も、会社への影響力を持ちつづけた。
-3.仕事が忙しい時期を退いたら、休暇を取って家族と旅行しようと思っている。
-4.A市の財政は一時の危機的状況を退いたが、いまだに厳しい運営が続いている。
+3.仕事が忙しい時期を終(お)えたら、休暇を取って家族と旅行しようと思っている。
+4.A市の財政は一時の危機的状況を乗り越えたが、いまだに厳しい運営が続いている。
 正解：(2)
 　解析：退く(しりぞく)：向后退；退出，离去(从什么身份，官职上隐退)；退一步想
 　(1)应该用:止めて 放弃，停止（某种状态）
