--- a/111.md
+++ b/111.md
@@ -1948,21 +1948,688 @@ Merit.利点。長所。
 
 # 2016 12 1-4
 
+　(1).人脈(じんみゃく)：人脉，人的关系
+　(2)鋭い(するどい)：尖锐的，尖的
+　(3)賢い(かしこい)：聪明的，伶俐的
+
+3. 文化の違いが食生活に顕著に現れている。
+1.げんちょ 
+2.けんしょ　跟巧
+3.けんちょ 
+4.げんしょ 
+正解：(3)
+　解析：文化方面的差异很明显地表现在饮食生活上。
+　(1)原著(げんちょ)：原著
+　(3)顕著(けんちょ)：明显地，显著的
+　(4)原書(げんしょ)：原版书，原作选项
+　(2)不存在。
+
+4. 相談の内容は多岐にわたった。
+1.たき
+2.たじ
+3.たぎ
+4.たし
+正解：(1)
+　解析：讨论的内容涉及到多方面。
+　(1)多岐(たき)：涉及多方面  
+　(2)他事(たじ)：别人的事情 他急
+　(3)多義(たぎ)：多义  
+　(4)足し(たし)：补足  他戏
+　(5)掠れる(かすれる)：嘶哑；掠过；写出飞白
+
+6. 家賃の相場は地域によって違う。
+1.あいば
+2.そうば
+3.あいじょう
+4.そうじょう
+　正解：(2)
+　解析：不同地方的房租行情不同。
+　(1)愛馬(あいば)：珍爱的马
+　(2)相場(そうば)：行市，市价；汇率；投机买卖
+　(3)愛情(あいじょう)：爱，爱情
+　(4)相乗(そうじょう)：相乘
+
+8. 議論は難航すると思ったが、すぐに意見がまとまり、                結論が出た。
+1.すんなり
+2.うっとり
+3.ふんわり
+4.こっそり
+　正解：(1)
+　解析：以为议论会很难进展，没想到很快意见就得到了统一，顺利地得出了结论。
+　(1)すんなり：顺利，容易  顺那利
+　(2)うっとり：发呆，出神；入迷，陶醉  午托里
+　(3)ふんわり：轻飘飘地 
+　(4)こっそり：偷偷地
+
+9. さっき駅前で佐藤さんを                んですが、今、海外にいるはずなのに変です。
+1.見合わせた
+2.見過ごした
+3.見かけた
+4.見違えた
+正解：(3)
+　解析：刚才在车站前碰到了佐藤，按说他现在应该在国外，好奇怪啊。
+　(1)見合わせる(みあわせる)：互相看，互视
+　(2)見過ごす(みすごす)：看漏，没看到
+　(3)見かける(みかける)：看到，碰到
+　(4)見違える(みちがえる)：看错
+
+(1)一掃(いっそう)：扫除，肃清
+　(2)追放(ついほう)：放逐，驱除
+　(3)削除(さくじょ)：删掉，删除
+　(4)排出(はいしゅつ)：排出，放出
+
+　(1)心情(しんじょう)：心理，心情
+　(2)好感(こうかん)：好感
+　(3)熱意(ねつい)：热忱，热情
+　(4)愛着(あいちゃく)：留恋，依依难舍
+
+　(1)データベース：数据库
+　(2)ベテラン：老手，有经验者　ベテラン社員
+　(3)ライフワーク：毕生的事业　lifework
+　(4)ノウハウ：技术，技巧　ノウハウコレクター　知识收集者　
+
+かねがね：很早之前，老早　＝　以前(いぜん)から：从以前开始
+
+故意に(こいに)：故意地
+　(1)わざと：故意的
+　(2)うっかり：不小心　うっかりミス
+　(3)いやいや：不情不愿，不乐意
+　(4)さっさと：毫不犹豫，迅速
+
+ 意気込み：干劲，热情　本気　弱気　 強気　〈商〉看涨，坚挺；（买风）很盛　
+　(1)敬意(けいい)：敬意
+　(2)自信(じしん)：自信
+　(3)意欲(いよく)：热情，积极性
+　(4)信頼(しんらい)：　信頼　
 
 
+おびえる　怯える　　　
+　おびえる：害怕，胆怯
+　(1)焦る(あせる)：焦急
+　(2)怖がる(こわがる)：害怕
+　(3)悩む(なやむ)：烦恼
+　(4)悔やむ(くやむ)：懊悔，后悔
+
+9. 私はその一言に安堵した。
+1.すっとした
+2.はっとした
+3.ほっとした
+4.かっとした
+正解：(3)
+　解析：听了那句话后我就放下心来了。
+　安堵：放心，安心
+　(1)すっとする：迅速的，轻快的；爽快
+　(2)はっとする：惊讶，大吃一惊
+　(3)ほっとする：放心
+　(4)かっとする：耀眼，旺盛；勃然大怒，好发脾气
+
+20. 閑静
+1.そのレストランは繁華街から外れた閑静な場所にある。
+2.今日は朝から具合が悪かったので、会社を休んで家で安静にしていた。
+3.用事が早く済み、暇な時間ができたので、映画を見に行くことにした。
+4.日中はにぎやかな公園だが、夜になると急に静かになる。
+正解：(1)
+　解析：閑静（かんせい）：淸净，幽静
+　(1)那个餐馆在远离闹市区的幽静场所。
+　(2)应该是：安静(あんせい)：安静，生病静养。
+　(3)应该用：暇(ひま)：闲暇。
+　(4)应该用：静か(しずか)：安静的。
+
+1. たやすい
+1.弟は寝坊したらしく、軽い物だけ食べて、慌てて出かけていった。
+2.伊藤氏とは大学時代からの親友で、本音が言える親しい関係だ。
+3.せっかくの日曜日だから、ゆっくり休んでのんびり過ごそうと思う。
+4.この問題は想像以上に複雑で、たやすく解決できるものではなかった。
+　正解：(4)
+　解析：たやすい：容易的，不费力气的
+　(1)应该用：軽い(かるい)：简便的，简单的。
+　(2)应该用：親しい(したしい)：亲密的，和善的，亲切的
+　(3)应该用：のんびり：舒舒服服，无忧无虑。
+　(4)这个问题比想象中要复杂，不是轻而易举就能解决的。
+
+2.察する
+1.医師たちはチームを組み、意見を出し合って、最良の治療法を探した。
+2.気象予報士はテレビの天気予報で、来週の気温の変化を見込み始めた。
+3.鈴木さんは、私が何も言わなくても、私の気持ちを察して慰めてくれた。
+4.外を歩いていたら急にいいアイディアを思いついたので、手帳にメモをした。
+　正解：(3)
+　解析：察する：推測，体谅，察觉
+　(1)应该用：探し(さがし)：寻找，寻求。
+　(2)应该用：見込む：(みこむ)：估计在内，预想。
+　(3)即使我什么都不说，铃木也能察觉到我的心情来安慰我。
+　(4)应该用：思いついた：忽然想出，忽然想起。
+
+23. 内訳
+1.来週のスケジュールを認識したが、予定がないのは木曜の夜だけだ。
+2.前回の出張費の内訳を見たら、交通費の割合が予想外に高かった。
+3.司会者は進行を間違えないように、式の進行要項を何度も見直した。
+4.家族の健康のため、栄養のバランスを考えて食事を作っている。
+正解：(2)
+　解析：内訳：明細，淸单
+　(1)应该用：スケジュール：日程安排。
+　(2)看了上次出差费用的明细，交通费用所占的比例高得出人意料。
+　(3)应该用：進行要項(しんこうようこう)：重点要推行的项目
+　(4)应该用：バランス：平衡。
+
+1.この事件は、複数の目撃者もくげきしゃの話がそれぞれ食い違っており、不明な点が多い。
+2.金庫を開けようと思ったが、どの鍵も合わなくて開けられなかった。
+3.何だか歩きにくいと思ったら、サンダルの左右が間違っていた。　凉鞋；拖鞋
+4.調味料を変えたのか、この料理はいつもと味が違っているように感じる。
+正解：(1)
+　解析：食い違う：不一致，有分歧
+　(1)这个事件的多个目击者所说的话都不一致，有很多不明的点。
+　(2)应该用：合わなく(あわなく)：不合适，不协调。
+　(3)应该用：間違って：弄错
+　(4)应该用：違って(ちがって)：错误的
 
 
-
-
-
-
-
-
-
-
-
-
+5. 過密
+1.雑誌で紹介されてから、この商品への過密な注文が続いているらしい。
+2.水質汚染に関して人々の抗議が過密になり、政府は対策を迫られている。
+3.今回の出張は過密なスケジュールで、ゆっくり食事する時間もなさそうだ。
+4.春になると、この池の周りには、色とりどりの花が過密に咲き乱れる。
+　正解：(3)
+　解析：過密：过密，过于集中
+　(1)应该用：頻繁(ひんぱん)：頻繁。
+　(2)应该用：苛烈(かれつ)：激烈，
+　(3)今天的出差时间安排非常集中，貌似没有能够慢慢吃饭的时间。
+　(4)应该用：盛ん(さかん)：繁盛，旺盛。
 
    
 
+# 2017 07  1-4 
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
  
