--- a/111.md
+++ b/111.md
@@ -2139,30 +2139,159 @@ Merit.利点。長所。
 
 # 2017 07  1-4 
 
+　(1).たがやす(耕す)：耕地
+　(2).ぬらす(濡らす)：淋湿
+　(3).うるおす(潤す)：湿润，滋润  例：喉を潤す。
+　(4).いやす(癒す)：治愈
+
+　(1).ざっきん(雑菌)：杂菌
+　(2).さっきん(殺菌)：杀菌
+　(3).さっこん(昨今)：最近
+　(4).ざっこん(雑婚)：乱婚
+
+　(1).けいしゃ(傾斜)：倾斜
+　(2).けいさ(稽査)：稽查
+　(3).かいしゃ(会社)：公司
+　(4).かいさ（階差）：差分
+
+ 　(1).はばまれて(阻む)：阻止
+　(2).にらまれて(睨む)：注视
+　(3).からまれて(絡む)：缠绕
+　(4).こばまれて(拒む)：阻挡
+
+9. 中学でクラスメートだった石井さんと話しているうちに、昔の記憶が                きた。
+1.さかのぼって
+2.よみがえって
+3.引き返して
+4.立ち直って
+　正解：(2)
+　解析：和初中同学石井聊着聊着，就想起了过去的事。
+　(1).さかのぼる(溯る)：追溯；逆流而上
+　(2).よみがえる(甦る)：苏生，复活；复兴，复苏
+　(3).引き返す(ひきかえす)：折回，返回；相反
+　(4).立ち直る(たちなおる)：恢复，复原；回升，好转
+
+11. 鈴木さんに表彰状を贈り、永年の功績を                。
+1.敬った
+2.仰いだ
+3.たたえた
+4.もてなした
+正解：(3)
+　解析：给铃木发了奖状，表彰了他多年的功绩。
+　(1).敬う(うやまう)：尊敬
+　(2).仰ぐ(あおぐ)：仰，瞻；依赖，仰仗；请求批准
+　(3).たたえる(称える)：称赞，赞扬；表彰，歌颂
+　(4).もてなす：招待，请客；接待，对待
+
+
+2. 今回のトラブルの原因は相手側にあって、池田さんには決して                はないよ。
+1.悪
+2.非
+3.苦
+4.没
+　正解：(2)
+　解析：这次的纠纷原因是在对方，池田绝对没有过错。
+　(1).悪(あく)：恶，坏；坏事；坏人
+　(2).非(ひ)：错误，缺点；不好，罪行；非难，责难
+　(3).苦(く)：痛苦；苦恼；辛苦，费心
+　(4).没(ぼつ)：死；不采用；沉没
+
+
+1).ますます：愈来愈；逐渐地；渐增地
+　(2).しきりに：频繁地；屡次，再三；不停地；一直地
+　(3).もっぱら：专门，主要，净
+　(4).せめて：起码，至少；总算，还算.
+
+4. 粘り強く交渉した。
+1.覚悟して
+2.油断せずに
+3.思い切って
+4.あきらめずに
+　正解：(4)
+　解析：不屈不挠地谈判。
+　粘り強い(ねばりづよい)：不屈不挠，坚忍不拔，顽强
+　(1).覚悟して(かくごして)：下决心
+　(2).油断せずに(ゆだんせずに)：戒备地，警惕地
+　(3).思い切って(おもいきって)：下决心，毅然決然
+　(4).あきらめずに：不放弃
+
+16. 本人もうすうす気づいていたと思う。
+1.おそらく
+2.さすがに
+3.なんとなく
+4.とっくに
+　正解：(3)
+　解析：我想他本人也隐隐约约察觉到了。
+　うすうす：稍稍，隐隐约约，模模糊糊
+　(1).おそらく：恐怕，大概；或许
+　(2).さすがに：真不愧是，的确，果然
+　(3).なんとなく：总觉得；不由得；虽然不清楚，但是……
+　(4)とっくに：早就
+
+
+20. 昇進
+1.私の大学は、2年生までに50単位とらないと、3年生に昇進できない。
+2.中村さんは、料理教室に通うようになって、プロ並みの腕前に昇進した。
+3.私が応援するチームは、今日の試合に勝って、2位に昇進した。
+4.松本課長が来月、部長に昇進することになったそうだ。
+
+
+题目解析
+
+　正解：(4)
+　解析：昇進：升职(一般指在组织内部的资格或等级提升一个档次)
+　(1).应该用：進級(しんきゅう)：晋级，升级，升班。
+　(2).应该用：上達(じょうたつ)/スキルアップ：进步，学术和技术等提高。
+　(3).应该用：昇格(しょうかく)：升格，晋级。
+　(4).听说松本课长下个月要升职为部长了。
+
+22. 滅びる
+1.事業の失敗が続き、このままでは資金が滅びるおそれがある。
+2.連日の異常な暑さが原因なのか、水槽の魚が滅びてしまった。
+3.今日の試合に負けて優勝の望みは滅びたが、最後までがんばろうと思う。
+4.昔この地域に栄えていた文明は大災害によって滅びたという説がある。
+
+
+题目解析
+
+　正解：(4)
+　解析：滅びる：毁灭，曾经存在的东西不复存在了
+　(1).应该用：絶える(たえる)：断绝，终了，停止，消失。
+　(2).应该用：全滅して(ぜんめつして)：全歼，全灭，完全失败。
+　(3).应该用：絶たれた(たたれた)：切断，断绝，解除关系。
+　(4).有一种说法认为，过去这个地区非常繁荣的文明是被一场大灾害毁灭的。
 
 
 
+烧饼日语在线题库
+JLPT - N1JLPT - N2JLPT - N3高考日语JLPT - N4JLPT - N5
+
+2017.07
+文字・語彙
+问题 - 1
+问题 - 2
+问题 - 3
+问题 - 4
+4.次の言葉の使い方として最もよいものを、1・2・3・4 から一つ選びなさい。
+25. 見落とす
+1.たとえ親友であっても、不正行為を見落とすわけにはいかない。
+2.練習しても一向に上達しないので、コーチから見落とされてしまった。
+3.「300,000円」と書いてあったのに、ゼロを一つ見落として3万円だと勘違いしていた。
+4.人込みの中を歩いているうちに、前を歩いていた友人を見落としてしまった。
+
+
+题目解析
+
+　正解：(3)
+　解析：見落とす：漏看；忽略
+　(1).应该用：見逃す(みのがす)：看漏，忽视，饶恕。
+　(2).应该用：見放されて(みはなされて)：抛弃，放弃。
+　(3).明明写的三十万日元，漏看了一个0以为是三万日元。
+　(4).应该用：見失って(みうしなって)：看不见，迷失，看丢。
 
 
 
-
-
- 
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
+# 201712 1-4
 
 
 
