--- a/111.md
+++ b/111.md
@@ -2293,38 +2293,119 @@ JLPT - N1JLPT - N2JLPT - N3高考日语JLPT - N4JLPT - N5
 
 # 201712 1-4
 
+　かいたく(開拓):开垦，开拓
+　かいだく(快諾):欣然承诺
+　かいせき(解析):解析
+　ふっこう(復興):复兴
+　ふくこう(腹腔):腹腔
+
+3. 書類の確認を怠ったために、問題が生じた。
+1.いつわった
+2.ためらった
+3.あやまった
+4.おこたった
+　正确答案:(4)
+　解析:因为在文件的检查上有了疏漏，所以产生了问题。
+　いつわる(偽る):说谎，假冒
+　ためらう(躊躇う):踌躇，犹豫
+　あやまる(謝る):道歉，赔礼
+　おこたる(怠る):懒惰，疏漏，疏忽
+
+ りょうしゅう(領収):收到
+　ろうしょう(朗誦):朗诵
+　りょうしょう(了承):理解，同意
+　ろうしゅう(陋習):陋习，恶习
+
+  さしず(指図):指示
+　しず(静):接头/接尾表示安静，心情平静
+　しじ(支持):支持
+
+ さぐり(探り):探索
+　たどり(辿り):追溯，查找
+　めぐり(巡り):巡游，历访
+　ねばり(粘り):韧性，粘性
+　(1)レート:汇率
+　(2)自問(じもん):自问
+　(3)打診(だしん):试探，探问
+　(4)試行(しこう):试行
+　(5)探索(たんさく):探索
+
+  (1)由来(ゆらい):来历，由来
+　(2)経路(けいろ):路径，路线
+　(3)経歴(けいれき):经历，履历
+　(4)従来(じゅうらい):过去，从前
+
+　(1)はじく(弾く):排斥，防，抗
+　(2)そらす(逸らす):岔开，偏离
+　(3)さける(避ける):避开，回避
+　(4)こばむ(拒む):阻挡，阻止
+
+
+ 　(1)脱退:退出，脱离(组织，团体等)
+　(2)逸脱:越出，脱离(主题，中心等)
+　(3)分散:分散，散开
+　(4)拡散:扩散
+
+  (1)あえて:敢于，硬要
+　(2)いっそ:干脆，宁可
+　(3)せめて:起码，至少，总算
+　(4)いとも:非常，十分
+　(1)ごろごろ:雷的轰鸣声;滚动的样子
+　(2)まちまち:各式各样，形形色色
+　(3)ぐらぐら:摇晃，摇摆，不稳定
+　(4)ぬるぬる:黏滑地
+
+  (1)いまだに:仍然，还(多接否定语)
+　(2)わずかに:少许，一些
+　(3)つねに:平时，常常地，总是
+　(4)さらに:更加，愈发，再
+
+
+(1)私は、努力を惜しまず何度も重複して(反復して・繰り返して)覚えることで、記憶を定着させた。
+我不遗余力地反复记忆，以此来巩固记忆。
+　(2)大量的数据中有重复的内容，有必要尽快整理。
+　(3)健康に自信があっても、無理が重複すれば(重なれば)体を壊してしまいますよ。
+即使对自己的身体健康有信心，如果过度勉强，也会搞坏身体的。
+　(4)開園を待つ人の列が、驚くほど重複して(伸びて)入場ゲートの前にできていた。
+等待开园的队伍，排队都延伸到入场大门前了，太吓人了。
+
+
+(1)うわさの拠点(源)を追究しても、なにも解決はしないだろう。
+　(2)日本近代文学の拠点(原点)となった作品として、この小説は高く評価された。
+　(3)この都市は、広場を拠点(中心)にして道が放射状に伸びている。
+　(4)A公司以所在城市京都为据点，向全国各地发展业务。
+4.A社は、地元の京都を拠点に全国各地でビジネスを展開している。
 
 
 
-
-
+解析:真っ先:最先，首先，最前面
+1.リーダーに適した人として、真っ先に私の頭に浮かんだのは石川(いしかわ)さんだった。
+　(1)最适合领导者的人选，我脑海中最先浮现的人是石川先生。
+　(2)次のテストではクラスで真っ先(トップ)になれるように頑張って勉強しようと思う。
+　(3)先ほどお配りした資料の真っ先(最初)にあるグラフをご覧ください。
+　(4)目が悪いので、教室の真っ先(一番前)に座らないと、黒板の字がよく読めない。
  
 
+(1)空港の滑走路を増設したことで、航空機の発着がますます緊密(頻繁)になった。
+　(2)今日の講演会は参加者が多く、会場の体育館には緊密に(ぎっしり)いすが並べられ
+　た。
+　(3)この二つの単語は意味が緊密(微細)に使い分けられているので、習得が難しい。
+　(4)在这个地区，学校和地区密切合作，保证孩子的安全。
+4.この地区では子どもの安全を守るため、学校と地域が緊密に協力している。
 
+24. 遂げる
+1.この町は、近年の再開発により、驚くような変化を遂げた。
+2.指定の口座に入金した時点で、正式な契約が遂げられる。
+3.池田(いけだ)さんは若手だが、担当部署で重要な責任を遂げている。
+4.業者の話では、来月末には駅前の工事を遂げる予定らしい。
+正确答案:(1)
+　解析:遂げる:完成(任务)，达成(目标)，最终形成(某种结果)
+　(1)这个小镇由于近年的重新开发，有着相当惊人的变化。
+　(2)指定の口座に入金した時点で、正式な契約が遂げられる(発効する)。
+　(3)池田さんは若手だが、担当部署で重要な責任を遂げて(担って)いる。
+　(4)業者の話では、来月末には駅前の工事を遂げる(完了する)予定らしい。
 
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
+# 201807 1-4
 
 
 
