--- a/1.md
+++ b/1.md
@@ -1,3 +1,8 @@
+この現場の仕事、本当に面白くて、リーダーと先輩方にもいつも助けていただいて、感謝の気持ちでいっぱいなんです。ただ、正直申し上げますと、通勤時間がちょっと長くて...もし可能でしたら、週に1、2回くらい在宅勤務をさせていただけると、もっと仕事に集中できるんじゃないかなと思っているんですが...
+
+
+
+
 私はこれまでバックエンドの開発を中心にやってきたんですが、こちらの現場では、リーダーと先輩方に丁寧にご指導いただいたおかげで、納期もしっかり守りながら様々な課題に対応できております。
 また、以前に画面開発の経験も若干ございまして、進捗表にある画面開発やdirlogのコード関連の業務にも非常に興味を持っています。もし担当させていただけるチャンスがありましたら、精一杯頑張らせていただきたいと思います。
 この現場の仕事内容に大変魅力を感じており、リーダーと先輩方には本当に親身になってご指導いただき、心から感謝しております。ただ、通勤時間がかなり長くなっておりまして、もし可能でしたら週1、2回ほど在宅勤務をさせていただけると、より一層仕事に集中できるかと思います。
